Elastic_Kubernetes_Service/K8s_Network_Policies_with_Calico_on_EKS/k8s/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: multi-tier-app
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
